fix cover text overflow and explore button underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,12 +106,10 @@ h1, h2{
     text-transform: uppercase;
     letter-spacing: 4px;
 
-    width: 200px;
-    height: 100px;
+    width: 260px;
+    height: auto;
 
-    padding-top: 20px;
-    padding-left: 30px;
-    padding-bottom: 40px;
+    padding: 20px 30px 20px 30px;
 
     background-color: rgba(255, 255, 255, 0.7);
 
@@ -175,7 +173,8 @@ margin: 0 auto;
     margin: 0 auto;
 }
 
-.btn a{
+.btn a,
+a .btn {
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
